  * New format '%{ }' for easier attribute access in the sprintf command 
  * New setting 'show_frame_decorations' that controls when frame decorations
    are shown. This should be used instead of the old 'always_show_frame'
  * New frame attribute 'content_geometry'
  * New tag attribute 'at_end'
  * New monitor attribute 'content_geometry'
  * Fix bug in ipc protocol for big-endian systems

Release 0.9.4 on 2022-03-16
---------------------------

  * Tabbed window titles in the 'max' layout algorithm (controllable via the
    'tabbed_max' setting)
  * Directionally moving through a max layout is possible via focus / shift by
    adding '--level=tabbed' (only for 'tabbed_max') or '--level=any' (any 'max'
    layout).
  * New decoration setting 'title_when' to control, when window titles and tabs
    are shown.
  * New decoration settings 'title_depth' and 'title_align'.
  * New decoration settings for configuring unselected tabs: 'tab_color',
    'tab_outer_width', 'tab_outer_color', 'tab_title_color'
  * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
  * New client attribute 'floating_effectively' and associated X11 properties
    'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
  * New 'foreach' command line flags: '--filter-name=', '--recursive', '--unique'
  * The 'spawn' command now prints an error message on exec failure
  * New read-only client attribute 'decoration_geometry'.
  * New rule condition 'fixedsize'
  * New attribute 'decorated' to disable window decorations
  * The cursor shape now indicates resize options.
  * New setting 'ellipsis'
  * Floating clients can now be dragged between monitors via the mouse
  * Frames can be simultaneously resized in x and y direction with the mouse.
  * Bug fixes:
    - Update floating geometry if a client's size hints change
    - Correct alpha value handling: if compositor is detected, premultiply
      rgb values with the alpha value
  * New dependency: xfixes
