@@ -5,6 +5,16 @@ This guide describes the list of incompatible changes between the different
 herbstluftwm releases and how to migrate scripts and configuration.
 See the link:NEWS[] file for a list of all changes and new features.
 
+0.9.5 to current git version
+----------------------------
+The geometry based detection of panels now is only active if the setting
+'panels.geometry_fallback' is activated. In order to restore the old behaviour,
+put
+
+    hc set_attr panels.geometry_fallback on
+
+in your autostart.
+
 0.9.4 to 0.9.5
 --------------
 The command 'smart_frame_surroundings' is no longer a boolean, and as such it is
